@@ -1,3 +1,13 @@
+2019-11-19  Matt Lewis  <jlewis3@apple.com>
+
+        Bring up WebGL Test Queue.
+        https://bugs.webkit.org/show_bug.cgi?id=204374
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2019-11-20  Jonathan Bedard  <jbedard@apple.com>
 
         [EWS] iOS layout-tests fails with 30+ failures on re-run and on clean-tree
